# RTOSExercise

./: .gitignore  README.md  USER_GUIDE.md  parse_logs.py  requirements.txt  visualize.py
freertos/: CMakeLists.txt
freertos/config/include/freertos/: FreeRTOSConfig.h
freertos/trace_hooks/include/: housekeeping_operations_tracing.h  job_execution_tracing.h  queue_tracing.h
main/: CMakeLists.txt  display.cpp  display.h  main.cpp
main/logging/: logging.c  logging.h
main/tasks/: exercise2.cpp  exercise2.h  stopwatch.cpp  stopwatch.h
main/trace-hooks/: trace-queue.c
main/trace-hooks/include/: trace-queue.h
